--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -11,7 +11,7 @@
 
     <TextView android:text="Outdoor Map" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="192dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="192dp" />
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
