--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,9 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <gradient
-        android:startColor="#C78181"
-        android:centerColor="#AF4C4C"
-        android:endColor="#7D2E2E"
+        android:startColor="#800000"
+        android:centerColor="#660000"
+        android:endColor="#4d0000"
         android:type="linear"
         android:angle="135"/>
 </shape>
