--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#660000</color>
     <color name="colorPrimaryDark">#4d0000</color>
     <color name="colorAccent">#ffaa2b</color>
+    <color name="fab">#0000ff</color>
 </resources>
