--- a/app/src/main/res/menu/activity_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_menu_drawer.xml
@@ -2,15 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
-        <item android:id="@+id/nav_camara" android:icon="@android:drawable/ic_menu_camera"
-            android:title="My timetable" />
-        <item android:id="@+id/nav_gallery" android:icon="@android:drawable/ic_menu_gallery"
-            android:title="Recent places" />
-        <item android:id="@+id/nav_slideshow" android:icon="@android:drawable/ic_menu_slideshow"
+        <item android:id="@+id/nav_gallery" android:icon="@android:drawable/ic_menu_mapmode"
+            android:title="McMaster Map" />
+        <item android:id="@+id/nav_camara" android:icon="@android:drawable/ic_menu_my_calendar"
+            android:title="My Timetable" />
+        <item android:id="@+id/nav_slideshow" android:icon="@android:drawable/ic_menu_myplaces"
             android:title="Building Index" />
-        <item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_manage"
+        <item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_upload"
             android:title="Upload timetable" />
-        <item android:id="@+id/nav_manage2" android:icon="@android:drawable/ic_menu_send"
+        <item android:id="@+id/nav_manage2" android:icon="@android:drawable/ic_menu_more"
             android:title="Download Offline" />
         <item android:id="@+id/nav_share2" android:icon="@android:drawable/ic_menu_share"
             android:title="Share timetable" />
