--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -13,16 +13,31 @@
         android:id="@+id/content_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignTop="@+id/search_frame">
+        android:layout_alignTop="@+id/linearLayout">
 
     </FrameLayout>
 
-    <FrameLayout
-        android:layout_width="match_parent"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|top"
+        android:orientation="horizontal"
+        android:padding="5dp"
         android:layout_marginTop="57dp"
-        android:id="@+id/search_frame"
-        android:background="#ceffffff"></FrameLayout>
+        android:id="@+id/linearLayout"
+        android:background="#d8ffffff">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/search_text"
+            android:textSize="20sp" />
+
+        <AutoCompleteTextView
+            android:id="@+id/autoCompleteTextView"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:textSize="20sp" />
+    </LinearLayout>
 
 </RelativeLayout>
